refactor: Drop username and use email + name
- Swithch authentication to email + password

- Add name field for user display and remove username fully

- Declare targets in Makefile using .PHONY
