# internal/dto/error.go
@@ -2,5 +2,5 @@ package dto
 
 type ErrorRes struct {
 	Error   string `json:"error" example:"Invalid credentials"`
-	Message string `json:"message,omitempty" example:"Username or password is incorrect"`
+	Message string `json:"message,omitempty" example:"Email or password is incorrect"`
 }
